plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.10'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.practice'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(24)
	}
}

tasks.withType(JavaCompile).configureEach {
	options.compilerArgs += '--enable-preview'
}

tasks.withType(Test).configureEach {
	jvmArgs += '--enable-preview'
}

tasks.withType(JavaExec).configureEach {
	jvmArgs += '--enable-preview'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
//	compileOnly 'org.projectlombok:lombok:1.18.32'
	runtimeOnly 'com.mysql:mysql-connector-j'
//	annotationProcessor 'org.projectlombok:lombok:1.18.32'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// redisson
	implementation 'org.redisson:redisson-spring-boot-starter:3.17.7'
}

tasks.named('test') {
	useJUnitPlatform()
}
